--- a/web/contacte.html
+++ b/web/contacte.html
@@ -6,37 +6,37 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="author" content="Nico Guerin">
         <meta name="description" content="Pàgina de contacte amb les productores de la sèrie.">
+        <link rel="stylesheet" href="../css/common.css">
+        <link rel="stylesheet" href="../css/contacte.css">
     </head>
     <body>
         <!--IMATGE LOGO CLUB DE FANS-->
         <header>
-            <img src="../img/logo.png" height="136" width="145" alt="Logo Club de Fans de La Casa de Papel">
+            <img class="logoCF" src="../img/logo.png" alt="Logo Club de Fans de La Casa de Papel">
+            <!--MENÚ NAVEGACIÓ-->
+            <nav>
+                <ul class="menuNav">
+                    <li class="llistaNav">
+                        <a class="linkNav" href="../index.html">INICI</a>
+                    </li>
+                    <li class="llistaNav">
+                        <a class="linkNav" href="../web/general.html">GENERAL</a>
+                    </li>
+                    <li class="llistaNav">
+                        <a class="linkNav" href="../web/fotos.html">FOTOS</a>
+                    </li>
+                    <li class="llistaNav">
+                        <a class="linkNav" href="../web/videos.html">VÍDEOS</a>
+                    </li>
+                    <li class="llistaNav">
+                        <a class="linkNav" href="../web/agenda.html">AGENDA</a>
+                    </li>
+                    <li class="llistaNav">
+                        <a class="linkNav" id="pagActiva" href="../web/contacte.html">CONTACTE</a>
+                    </li>
+                </ul>
+            </nav>
         </header>
-        <hr>
-        <!--MENÚ NAVEGACIÓ-->
-        <nav>
-            <ul>
-                <li>
-                    <a href="../index.html">INICI</a>
-                </li>
-                <li>
-                    <a href="../web/general.html">GENERAL</a>
-                </li>
-                <li>
-                    <a href="../web/fotos.html">FOTOS</a>
-                </li>
-                <li>
-                    <a href="../web/videos.html">VÍDEOS</a>
-                </li>
-                <li>
-                    <a href="../web/agenda.html">AGENDA</a>
-                </li>
-                <li>
-                    <a href="../web/contacte.html">CONTACTE</a>
-                </li>
-            </ul>
-        </nav>
-        <hr>
         <main>
             <h2>Pàgina de contacte</h2>
             <div>
@@ -55,26 +55,25 @@
                 </div>
             </div> 
         </main>       
-        <hr>
         <!--COPYRIGHT + XARXES SOCIALS-->
         <footer>
-            <p>© Drets reservats, 2022</p>
-            <p>Segueix la sèrie a les xarxes socials!</p>
-            <!-- INSTAGRAM -->
-            <span>
-                <img src="../img/logoinstagram.png" alt="Logo Instagram" height="15" width="15">
-                <a href="https://www.instagram.com/lacasadepapel/" target="_blank">Instagram</a>
-            </span>
-            <!-- TWITTER -->
-            <span>
-                <img src="../img/logotwitter.png" alt="Logo Twitter" height="15" width="15">
-                <a href="https://twitter.com/lacasadepapel" target="_blank">Twitter</a>
-            </span>
-            <!-- FACEBOOK -->
-            <span>
-                <img src="../img/logofacebook.png" alt="Logo Facebook" height="15" width="25">
-                <a href="https://es-es.facebook.com/lacasadepapelnetflix/" target="_blank">Facebook</a>
-            </span>
+            <p class="textFooter">© Drets reservats, 2022</p>
+            <p class="textFooter">Segueix la sèrie a les xarxes socials!</p>
+            
+            <div class="socialMedia">
+                <div class="social">
+                    <img class="socialIcon" src="https://nicoguerin.github.io/m4uf1pac1/img/logoinstagram.png" alt="logoInstagram">
+                    <a class="socialText" href="https://www.instagram.com" target="_blank">Instagram</a>
+                </div>
+                <div class="social">
+                    <img class="socialIcon" src="https://nicoguerin.github.io/m4uf1pac1/img/logotwitter.png" alt="logoTwitter">
+                    <a class="socialText" href="https://www.twitter.com" target="_blank">Twitter</a>
+                </div>
+                <div class="social">
+                    <img class="socialIcon" src="https://cdn-icons-png.flaticon.com/512/49/49354.png" alt="logoFacebook">
+                    <a class="socialText" href="https://www.facebook.com" target="_blank">Facebook</a>
+                </div>
+            </div>
         </footer>
     </body>
 </html>
