--- a/web/contacte.html
+++ b/web/contacte.html
@@ -37,43 +37,45 @@
                 </ul>
             </nav>
         </header>
-        <main>
-            <h2>Pàgina de contacte</h2>
-            <div>
-                <!-- CONTACTE AMB VANCOUVER MEDIA -->
+        <div class="contingut">
+            <main>
+                <h2>Pàgina de contacte</h2>
                 <div>
-                    <h2><u>Vancouver Media</u></h2>
-                    <p>Envia un mail des d'<a href="mailto:comunicacion@vancouvermedia.es">aquí</a> o troba'ls a:</p>
-                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3026.8675941520924!2d-3.7582647825561524!3d40.654849000000006!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd417fb988c8bd89%3A0x14a3233d194e2789!2sVancouver%20media!5e0!3m2!1ses!2ses!4v1664011131407!5m2!1ses!2ses" width="550" height="400"></iframe>
-                </div>
+                    <!-- CONTACTE AMB VANCOUVER MEDIA -->
+                    <div>
+                        <h2><u>Vancouver Media</u></h2>
+                        <p>Envia un mail des d'<a href="mailto:comunicacion@vancouvermedia.es">aquí</a> o troba'ls a:</p>
+                        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3026.8675941520924!2d-3.7582647825561524!3d40.654849000000006!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd417fb988c8bd89%3A0x14a3233d194e2789!2sVancouver%20media!5e0!3m2!1ses!2ses!4v1664011131407!5m2!1ses!2ses" width="550" height="400"></iframe>
+                    </div>
 
-                <!-- CONTACTE AMB ATRESMEDIA -->
-                <div>
-                    <h2><u>Atresmedia</u></h2>
-                    <p>Envia un mail des d'<a href="mailto:comunicacion@atresmediatv.es">aquí</a>, truca al 91 623 05 00 o troba'ls a:</p>
-                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3031.2798633202256!2d-3.6185415486705326!3d40.55749660488807!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd422d18cf3f25dd%3A0x49de7692d817460d!2sAtresmedia%20Corporaci%C3%B3n%20de%20Medios%20de%20Comunicaci%C3%B3n!5e0!3m2!1ses!2ses!4v1663960071963!5m2!1ses!2ses" width="550" height="400"></iframe>
+                    <!-- CONTACTE AMB ATRESMEDIA -->
+                    <div>
+                        <h2><u>Atresmedia</u></h2>
+                        <p>Envia un mail des d'<a href="mailto:comunicacion@atresmediatv.es">aquí</a>, truca al 91 623 05 00 o troba'ls a:</p>
+                        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3031.2798633202256!2d-3.6185415486705326!3d40.55749660488807!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd422d18cf3f25dd%3A0x49de7692d817460d!2sAtresmedia%20Corporaci%C3%B3n%20de%20Medios%20de%20Comunicaci%C3%B3n!5e0!3m2!1ses!2ses!4v1663960071963!5m2!1ses!2ses" width="550" height="400"></iframe>
+                    </div>
+                </div> 
+            </main>       
+            <!--COPYRIGHT + XARXES SOCIALS-->
+            <footer>
+                <p class="textFooter">© Drets reservats, 2022</p>
+                <p class="textFooter">Segueix la sèrie a les xarxes socials!</p>
+                
+                <div class="socialMedia">
+                    <div class="social">
+                        <img class="socialIcon" src="https://nicoguerin.github.io/m4uf1pac1/img/logoinstagram.png" alt="logoInstagram">
+                        <a class="socialText" href="https://www.instagram.com" target="_blank">Instagram</a>
+                    </div>
+                    <div class="social">
+                        <img class="socialIcon" src="https://nicoguerin.github.io/m4uf1pac1/img/logotwitter.png" alt="logoTwitter">
+                        <a class="socialText" href="https://www.twitter.com" target="_blank">Twitter</a>
+                    </div>
+                    <div class="social">
+                        <img class="socialIcon" src="https://cdn-icons-png.flaticon.com/512/49/49354.png" alt="logoFacebook">
+                        <a class="socialText" href="https://www.facebook.com" target="_blank">Facebook</a>
+                    </div>
                 </div>
-            </div> 
-        </main>       
-        <!--COPYRIGHT + XARXES SOCIALS-->
-        <footer>
-            <p class="textFooter">© Drets reservats, 2022</p>
-            <p class="textFooter">Segueix la sèrie a les xarxes socials!</p>
-            
-            <div class="socialMedia">
-                <div class="social">
-                    <img class="socialIcon" src="https://nicoguerin.github.io/m4uf1pac1/img/logoinstagram.png" alt="logoInstagram">
-                    <a class="socialText" href="https://www.instagram.com" target="_blank">Instagram</a>
-                </div>
-                <div class="social">
-                    <img class="socialIcon" src="https://nicoguerin.github.io/m4uf1pac1/img/logotwitter.png" alt="logoTwitter">
-                    <a class="socialText" href="https://www.twitter.com" target="_blank">Twitter</a>
-                </div>
-                <div class="social">
-                    <img class="socialIcon" src="https://cdn-icons-png.flaticon.com/512/49/49354.png" alt="logoFacebook">
-                    <a class="socialText" href="https://www.facebook.com" target="_blank">Facebook</a>
-                </div>
-            </div>
-        </footer>
+            </footer>
+        </div>
     </body>
 </html>
