--- a/web/fotos.html
+++ b/web/fotos.html
@@ -37,41 +37,43 @@
                 </ul>
             </nav>
         </header>
-        <main>
-            <h2>Secció de fotos sobre la sèrie</h2>
+        <div class="contingut">
+            <main>
+                <h2>Secció de fotos sobre la sèrie</h2>
 
-            <div>
-                <img src="../img/im1.jpg" height="350" alt="Atracadors deixant les armes al terra">
-                <img src="../img/im2.jpg" height="350" alt="Ostatge és disparat per error per la policia">
-                <img src="../img/im3.jpg" height="350" alt="La banda preparant-se per atracar el banc d'Espanya">
-                <img src="../img/im4.jpg" height="350" alt="Nairobi enmig dels ostatges">
-                <img src="../img/im5.webp" height="350" alt="La banda reaccionant a les notícies sobre l'atracament">
-                <img src="../img/im6.webp" height="350" alt="Berlín ordenant a Helsinki i Tokio a disparar">
-                <img src="../img/im7.jpg" height="350" alt="Denver i Rio preparats per a disparar">
-                <img src="../img/im8.webp" height="350" alt="La banda i els ostatges amb màscares diferents en una de les seves astúcies">
-                <img src="../img/im9.jpg" height="350" alt="Banda amb una metralladora Brownie">
-                <img src="../img/im10.jpg" height="350" alt="Tokio, Berlín, Denver i Río reunits">
-            </div>
-        </main>
-        <!--COPYRIGHT + XARXES SOCIALS-->
-        <footer>
-            <p class="textFooter">© Drets reservats, 2022</p>
-            <p class="textFooter">Segueix la sèrie a les xarxes socials!</p>
-            
-            <div class="socialMedia">
-                <div class="social">
-                    <img class="socialIcon" src="https://nicoguerin.github.io/m4uf1pac1/img/logoinstagram.png" alt="logoInstagram">
-                    <a class="socialText" href="https://www.instagram.com" target="_blank">Instagram</a>
+                <div>
+                    <img src="../img/im1.jpg" height="350" alt="Atracadors deixant les armes al terra">
+                    <img src="../img/im2.jpg" height="350" alt="Ostatge és disparat per error per la policia">
+                    <img src="../img/im3.jpg" height="350" alt="La banda preparant-se per atracar el banc d'Espanya">
+                    <img src="../img/im4.jpg" height="350" alt="Nairobi enmig dels ostatges">
+                    <img src="../img/im5.webp" height="350" alt="La banda reaccionant a les notícies sobre l'atracament">
+                    <img src="../img/im6.webp" height="350" alt="Berlín ordenant a Helsinki i Tokio a disparar">
+                    <img src="../img/im7.jpg" height="350" alt="Denver i Rio preparats per a disparar">
+                    <img src="../img/im8.webp" height="350" alt="La banda i els ostatges amb màscares diferents en una de les seves astúcies">
+                    <img src="../img/im9.jpg" height="350" alt="Banda amb una metralladora Brownie">
+                    <img src="../img/im10.jpg" height="350" alt="Tokio, Berlín, Denver i Río reunits">
                 </div>
-                <div class="social">
-                    <img class="socialIcon" src="https://nicoguerin.github.io/m4uf1pac1/img/logotwitter.png" alt="logoTwitter">
-                    <a class="socialText" href="https://www.twitter.com" target="_blank">Twitter</a>
+            </main>
+            <!--COPYRIGHT + XARXES SOCIALS-->
+            <footer>
+                <p class="textFooter">© Drets reservats, 2022</p>
+                <p class="textFooter">Segueix la sèrie a les xarxes socials!</p>
+                
+                <div class="socialMedia">
+                    <div class="social">
+                        <img class="socialIcon" src="https://nicoguerin.github.io/m4uf1pac1/img/logoinstagram.png" alt="logoInstagram">
+                        <a class="socialText" href="https://www.instagram.com" target="_blank">Instagram</a>
+                    </div>
+                    <div class="social">
+                        <img class="socialIcon" src="https://nicoguerin.github.io/m4uf1pac1/img/logotwitter.png" alt="logoTwitter">
+                        <a class="socialText" href="https://www.twitter.com" target="_blank">Twitter</a>
+                    </div>
+                    <div class="social">
+                        <img class="socialIcon" src="https://cdn-icons-png.flaticon.com/512/49/49354.png" alt="logoFacebook">
+                        <a class="socialText" href="https://www.facebook.com" target="_blank">Facebook</a>
+                    </div>
                 </div>
-                <div class="social">
-                    <img class="socialIcon" src="https://cdn-icons-png.flaticon.com/512/49/49354.png" alt="logoFacebook">
-                    <a class="socialText" href="https://www.facebook.com" target="_blank">Facebook</a>
-                </div>
-            </div>
-        </footer>
+            </footer>
+        </div>
     </body>
 </html>
