--- a/web/general.html
+++ b/web/general.html
@@ -40,7 +40,7 @@
         <div class="contingut">
             <main>
                 <!-- INFORMACIÓ GENERAL -->
-                <section>
+                <section id="section1">
                     <h2>Informació general</h2>
                     <ul>
                         <li><strong>País d'origen:</strong> Espanya</li>
@@ -53,7 +53,7 @@
                 </section>
                 
                 <!-- INFORMACIÓ PRODUCCIÓ -->
-                <section>
+                <section id="section2">
                     <h2>Informació sobre la producció</h2>
                     <h3>Directors</h3>
                     <ul>
@@ -64,7 +64,7 @@
                 </section>
 
                 <!-- INFORMACIÓ PRODUCTORES -->
-                <section>
+                <section id="section3">
                     <h3>Productores</h3>
                     <ul>
                         <li>Vancouver Media</li>
@@ -73,7 +73,7 @@
                 </section>
 
                 <!-- INFORMACIÓ DISTRIBUIDORES -->
-                <section>
+                <section id="section4">
                     <h3>Distribuidores</h3>
                     <ul>
                         <li>Antena 3 (T1 - T2)</li>
@@ -82,7 +82,7 @@
                 </section>
 
                 <!-- ACTORS / ACTRIUS -->
-                <section>
+                <section id="section5">
                     <h2>Actors i actrius</h2>
                     <ul>
                         <li><strong>Úrsula Corberó</strong>, interpretant Tokio</li>
@@ -106,7 +106,7 @@
                 </section>
 
                 <!-- TRAMES DE LES TEMPORADES -->
-                <section>
+                <section id="section6">
                     <h2>Trames</h2>
                     <h3>Part 1 i 2</h3>
                     <p>
@@ -125,7 +125,7 @@
                 </section>
                 
                 <!-- TEMES PRINCIPALS DE LA SÈRIE -->
-                <section>
+                <section id="section7">
                     <h2>Temes principals</h2>
                     <p><strong>My Life Is Going On</strong>, de Cicilia Krull, que és el tema de la intro de la sèrie</p>
                     <audio src="../aud/temaprincipal.mp3" controls></audio>
