--- a/web/agenda.html
+++ b/web/agenda.html
@@ -37,124 +37,124 @@
                 </ul>
             </nav>
         </header>
-        <div class="contingut">
-            <main>
-                <h2>Consulta tots els capítols de cada temporada de la sèrie</h2>
-                <table>
-                    <thead>
-                        <tr>
-                            <th></th>
-                            <th>Temp. 1</th>
-                            <th>Temp. 2</th>
-                            <th>Temp. 3</th>
-                            <th>Temp. 4</th>
-                            <th>Temp. 5</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        <tr>
-                            <th>Cap. 1</th>
-                            <td>Efectuar lo acordado</td>
-                            <td>Se acabaron las máscaras</td>
-                            <td>Hemos vuelto</td>
-                            <td>Game Over</td>
-                            <td>El final del camino</td>
-                        </tr>
-                        <tr>
-                            <th>Cap. 2</th>
-                            <td>Imprudencias letales</td>
-                            <td>La cabeza del plan</td>
-                            <td>Aikido</td>
-                            <td>La boda de Berlín</td>
-                            <td>¿Crees en la reencarnación?</td>
-                        </tr>
-                        <tr>
-                            <th>Cap. 3</th>
-                            <td>Errar al disparar</td>
-                            <td>Cuestión de eficacia</td>
-                            <td>48 metros bajo el suelo</td>
-                            <td>Lección de anatomía</td>
-                            <td>EL espectáculo de la vida</td>
-                        </tr>
-                        <tr>
-                            <th>Cap. 4</th>
-                            <td>Caballo de Troya</td>
-                            <td>¿Qué hemos hecho?</td>
-                            <td>La hora del delfín</td>
-                            <td>Suspiros de España</td>
-                            <td>Tu sitio en el cielo</td>
-                        </tr>
-                        <tr>
-                            <th>Cap. 5</th>
-                            <td>El día de la marmota</td>
-                            <td>A contrarreloj</td>
-                            <td>Bum, bum, ciao</td>
-                            <td>5 minutos antes</td>
-                            <td>Vivir muchas vidas</td>
-                        </tr>
-                        <tr>
-                            <th>Cap. 6</th>
-                            <td>La cálida guerra fría</td>
-                            <td>Bella Ciao</td>
-                            <td>Todo pareció insignificante</td>
-                            <td>KO técnico</td>
-                            <td>Válvulas de escape</td>
-                        </tr>
-                        <tr>
-                            <th>Cap. 7</th>
-                            <td>Refrigerada inestabilidad</td>
-                            <td>-</td>
-                            <td>Pequeñas vacaciones</td>
-                            <td>Tumbar la carpa</td>
-                            <td>Ciencia ilusionada</td>
-                        </tr>
-                        <tr>
-                            <th>Cap. 8</th>
-                            <td>Tú lo has buscado</td>
-                            <td>-</td>
-                            <td>La deriva</td>
-                            <td>Plan París</td>
-                            <td>La teoría de la elegancia</td>
-                        </tr>
-                        <tr>
-                            <th>Cap. 9</th>
-                            <td>El que la sigue la consigue</td>
-                            <td>-</td>
-                            <td>-</td>
-                            <td>-</td>
-                            <td>Lo que se habla en la cama</td>
-                        </tr>
-                        <tr>
-                            <th>Cap. 10</th>
-                            <td>-</td>
-                            <td>-</td>
-                            <td>-</td>
-                            <td>-</td>
-                            <td>Una tradición familiar</td>
-                        </tr>
-                    </tbody>
-                </table>
-            </main>
-            <!--COPYRIGHT + XARXES SOCIALS-->
-            <footer>
-                <p class="textFooter">© Drets reservats, 2022</p>
-                <p class="textFooter">Segueix la sèrie a les xarxes socials!</p>
-                
-                <div class="socialMedia">
-                    <div class="social">
-                        <img class="socialIcon" src="https://nicoguerin.github.io/m4uf1pac1/img/logoinstagram.png" alt="logoInstagram">
-                        <a class="socialText" href="https://www.instagram.com" target="_blank">Instagram</a>
-                    </div>
-                    <div class="social">
-                        <img class="socialIcon" src="https://nicoguerin.github.io/m4uf1pac1/img/logotwitter.png" alt="logoTwitter">
-                        <a class="socialText" href="https://www.twitter.com" target="_blank">Twitter</a>
-                    </div>
-                    <div class="social">
-                        <img class="socialIcon" src="https://cdn-icons-png.flaticon.com/512/49/49354.png" alt="logoFacebook">
-                        <a class="socialText" href="https://www.facebook.com" target="_blank">Facebook</a>
-                    </div>
+        <main>
+            <h2>Consulta tots els capítols de cada temporada de la sèrie</h2>
+            <table>
+                <thead>
+                    <tr>
+                        <th></th>
+                        <th>Temp. 1</th>
+                        <th>Temp. 2</th>
+                        <th>Temp. 3</th>
+                        <th>Temp. 4</th>
+                        <th>Temp. 5</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <th>Cap. 1</th>
+                        <td>Efectuar lo acordado</td>
+                        <td>Se acabaron las máscaras</td>
+                        <td>Hemos vuelto</td>
+                        <td>Game Over</td>
+                        <td>El final del camino</td>
+                    </tr>
+                    <tr>
+                        <th>Cap. 2</th>
+                        <td>Imprudencias letales</td>
+                        <td>La cabeza del plan</td>
+                        <td>Aikido</td>
+                        <td>La boda de Berlín</td>
+                        <td>¿Crees en la reencarnación?</td>
+                    </tr>
+                    <tr>
+                        <th>Cap. 3</th>
+                        <td>Errar al disparar</td>
+                        <td>Cuestión de eficacia</td>
+                        <td>48 metros bajo el suelo</td>
+                        <td>Lección de anatomía</td>
+                        <td>EL espectáculo de la vida</td>
+                    </tr>
+                    <tr>
+                        <th>Cap. 4</th>
+                        <td>Caballo de Troya</td>
+                        <td>¿Qué hemos hecho?</td>
+                        <td>La hora del delfín</td>
+                        <td>Suspiros de España</td>
+                        <td>Tu sitio en el cielo</td>
+                    </tr>
+                    <tr>
+                        <th>Cap. 5</th>
+                        <td>El día de la marmota</td>
+                        <td>A contrarreloj</td>
+                        <td>Bum, bum, ciao</td>
+                        <td>5 minutos antes</td>
+                        <td>Vivir muchas vidas</td>
+                    </tr>
+                    <tr>
+                        <th>Cap. 6</th>
+                        <td>La cálida guerra fría</td>
+                        <td>Bella Ciao</td>
+                        <td>Todo pareció insignificante</td>
+                        <td>KO técnico</td>
+                        <td>Válvulas de escape</td>
+                    </tr>
+                    <tr>
+                        <th>Cap. 7</th>
+                        <td>Refrigerada inestabilidad</td>
+                        <td>-</td>
+                        <td>Pequeñas vacaciones</td>
+                        <td>Tumbar la carpa</td>
+                        <td>Ciencia ilusionada</td>
+                    </tr>
+                    <tr>
+                        <th>Cap. 8</th>
+                        <td>Tú lo has buscado</td>
+                        <td>-</td>
+                        <td>La deriva</td>
+                        <td>Plan París</td>
+                        <td>La teoría de la elegancia</td>
+                    </tr>
+                    <tr>
+                        <th>Cap. 9</th>
+                        <td>El que la sigue la consigue</td>
+                        <td>-</td>
+                        <td>-</td>
+                        <td>-</td>
+                        <td>Lo que se habla en la cama</td>
+                    </tr>
+                    <tr>
+                        <th>Cap. 10</th>
+                        <td>-</td>
+                        <td>-</td>
+                        <td>-</td>
+                        <td>-</td>
+                        <td>Una tradición familiar</td>
+                    </tr>
+                </tbody>
+            </table>
+        </main>
+        <!--COPYRIGHT + XARXES SOCIALS-->
+        <footer>
+            <p class="textFooter">© Drets reservats, 2022</p>
+            <p class="textFooter">Segueix la sèrie a les xarxes socials!</p>
+
+            <div class="socialMedia">
+                <div class="social">
+                    <img class="socialIcon" src="https://nicoguerin.github.io/m4uf1pac1/img/logoinstagram.png"
+                        alt="logoInstagram">
+                    <a class="socialText" href="https://www.instagram.com" target="_blank">Instagram</a>
                 </div>
-            </footer>
-        </div>
+                <div class="social">
+                    <img class="socialIcon" src="https://nicoguerin.github.io/m4uf1pac1/img/logotwitter.png"
+                        alt="logoTwitter">
+                    <a class="socialText" href="https://www.twitter.com" target="_blank">Twitter</a>
+                </div>
+                <div class="social">
+                    <img class="socialIcon" src="https://cdn-icons-png.flaticon.com/512/49/49354.png" alt="logoFacebook">
+                    <a class="socialText" href="https://www.facebook.com" target="_blank">Facebook</a>
+                </div>
+            </div>
+        </footer>
     </body>
 </html>
