--- a/web/videos.html
+++ b/web/videos.html
@@ -38,107 +38,118 @@
             </nav>
         </header>
         <!--VÍDEOS-->
-        <div class="contingut">
-            <main>
-                <h2>Secció de vídeos sobre la sèrie</h2>
-                
-                <!-- Moments destacats de la sèrie -->
-                <div>
-                    <h2><u>Moments destacats</u></h2>
-                    <div>
-                        <!-- Intro -->
-                        <div>
-                            <h3>Intro de la sèrie</h3>
-                            <iframe width="520" height="330" src="https://www.youtube.com/embed/qJGJEA2OJLU" title="Intro La Casa de Papel" allowfullscreen></iframe>
-                        </div>
-                        <!-- Bella Ciao -->
-                        <div>
-                            <h3>El Profesor i Berlín cantant el Bella Ciao</h3>
-                            <iframe width="520" height="330" src="https://www.youtube.com/embed/9ao4FEaDGhQ" title="Bella Ciao" allowfullscreen></iframe>
-                        </div>
-                        <!-- Ti Amo -->
-                        <div>
-                            <h3>Casament entre Berlín i Tatiana</h3>
-                            <iframe width="520" height="330" src="https://www.youtube.com/embed/K3xtWk9VJ5s?start=8" title="Ti Amo" allowfullscreen></iframe>
-                        </div>
-                    </div>
-                </div>
+        <main>
+            <h2>Secció de vídeos sobre la sèrie</h2>
 
-                <!-- Tràilers de cada temporada -->
+            <!-- Moments destacats de la sèrie -->
+            <div>
+                <h2><u>Moments destacats</u></h2>
                 <div>
-                    <h2><u>Tràilers de cada temporada</u></h2>
-
+                    <!-- Intro -->
                     <div>
-                        <!-- Temporada 1 -->
-                        <div>
-                            <h3>Temporada 1</h3>
-                            <iframe width="520" height="330" src="https://www.youtube.com/embed/To_kVMMu-Ls?" title="Trailer temporada 1" allowfullscreen></iframe>
-                        </div>
-                        <!-- Temporada 2 -->
-                        <div>
-                            <h3>Temporada 2</h3>
-                            <iframe width="520" height="330" src="https://www.youtube.com/embed/KF93D4t_jDs?" title="Trailer temporada 2" allowfullscreen></iframe>
-                        </div>
-                        <!-- Temporada 3 -->
-                        <div>
-                            <h3>Temporada 3</h3>
-                            <iframe width="520" height="330" src="https://www.youtube.com/embed/82pIoHo6Te4?" title="Trailer temporada 3" allowfullscreen></iframe>
-                        </div>
-                        <!-- Temporada 4 -->
-                        <div>
-                            <h3>Temporada 4</h3>
-                            <iframe width="520" height="330" src="https://www.youtube.com/embed/YlnmVLoIsRk?" title="Trailer temporada 4" allowfullscreen></iframe>
-                        </div>
-                        <!-- Temporada 5 -->
-                        <div>
-                            <h3>Temporada 5</h3>
-                            <iframe width="520" height="330" src="https://www.youtube.com/embed/9EThJa4-1t4?" title="Trailer temporada 5" allowfullscreen></iframe>
-                        </div>
+                        <h3>Intro de la sèrie</h3>
+                        <iframe width="520" height="330" src="https://www.youtube.com/embed/qJGJEA2OJLU"
+                            title="Intro La Casa de Papel" allowfullscreen></iframe>
+                    </div>
+                    <!-- Bella Ciao -->
+                    <div>
+                        <h3>El Profesor i Berlín cantant el Bella Ciao</h3>
+                        <iframe width="520" height="330" src="https://www.youtube.com/embed/9ao4FEaDGhQ" title="Bella Ciao"
+                            allowfullscreen></iframe>
+                    </div>
+                    <!-- Ti Amo -->
+                    <div>
+                        <h3>Casament entre Berlín i Tatiana</h3>
+                        <iframe width="520" height="330" src="https://www.youtube.com/embed/K3xtWk9VJ5s?start=8"
+                            title="Ti Amo" allowfullscreen></iframe>
                     </div>
                 </div>
+            </div>
 
-                <!-- Preses falses -->
+            <!-- Tràilers de cada temporada -->
+            <div>
+                <h2><u>Tràilers de cada temporada</u></h2>
+
                 <div>
-                    <h2><u>Preses falses</u></h2>
+                    <!-- Temporada 1 -->
                     <div>
-                        <!-- Part 1 -->
-                        <div>
-                            <h3>Part 1</h3>
-                            <iframe width="520" height="330" src="https://www.youtube.com/embed/UnrQ4XM4TFU?" title="Bloopers 1" allowfullscreen></iframe>
-                        </div>
-                        <!-- Part 2 -->
-                        <div>
-                            <h3>Part 2</h3>
-                            <iframe width="520" height="330" src="https://www.youtube.com/embed/YqOb3PrDAsE?" title="Bloopers 2" allowfullscreen></iframe>
-                        </div>
-                        <!-- Part 3 -->
-                        <div>
-                            <h3>Part 3</h3>
-                            <iframe width="520" height="330" src="https://www.youtube.com/embed/nueLNG9QZ_g?" title="Bloopers 3" allowfullscreen></iframe>
-                        </div>
+                        <h3>Temporada 1</h3>
+                        <iframe width="520" height="330" src="https://www.youtube.com/embed/To_kVMMu-Ls?"
+                            title="Trailer temporada 1" allowfullscreen></iframe>
+                    </div>
+                    <!-- Temporada 2 -->
+                    <div>
+                        <h3>Temporada 2</h3>
+                        <iframe width="520" height="330" src="https://www.youtube.com/embed/KF93D4t_jDs?"
+                            title="Trailer temporada 2" allowfullscreen></iframe>
+                    </div>
+                    <!-- Temporada 3 -->
+                    <div>
+                        <h3>Temporada 3</h3>
+                        <iframe width="520" height="330" src="https://www.youtube.com/embed/82pIoHo6Te4?"
+                            title="Trailer temporada 3" allowfullscreen></iframe>
+                    </div>
+                    <!-- Temporada 4 -->
+                    <div>
+                        <h3>Temporada 4</h3>
+                        <iframe width="520" height="330" src="https://www.youtube.com/embed/YlnmVLoIsRk?"
+                            title="Trailer temporada 4" allowfullscreen></iframe>
+                    </div>
+                    <!-- Temporada 5 -->
+                    <div>
+                        <h3>Temporada 5</h3>
+                        <iframe width="520" height="330" src="https://www.youtube.com/embed/9EThJa4-1t4?"
+                            title="Trailer temporada 5" allowfullscreen></iframe>
                     </div>
                 </div>
-            </main>
-            <!--COPYRIGHT + XARXES SOCIALS-->
-            <footer>
-                <p class="textFooter">© Drets reservats, 2022</p>
-                <p class="textFooter">Segueix la sèrie a les xarxes socials!</p>
-                
-                <div class="socialMedia">
-                    <div class="social">
-                        <img class="socialIcon" src="https://nicoguerin.github.io/m4uf1pac1/img/logoinstagram.png" alt="logoInstagram">
-                        <a class="socialText" href="https://www.instagram.com" target="_blank">Instagram</a>
+            </div>
+
+            <!-- Preses falses -->
+            <div>
+                <h2><u>Preses falses</u></h2>
+                <div>
+                    <!-- Part 1 -->
+                    <div>
+                        <h3>Part 1</h3>
+                        <iframe width="520" height="330" src="https://www.youtube.com/embed/UnrQ4XM4TFU?" title="Bloopers 1"
+                            allowfullscreen></iframe>
                     </div>
-                    <div class="social">
-                        <img class="socialIcon" src="https://nicoguerin.github.io/m4uf1pac1/img/logotwitter.png" alt="logoTwitter">
-                        <a class="socialText" href="https://www.twitter.com" target="_blank">Twitter</a>
+                    <!-- Part 2 -->
+                    <div>
+                        <h3>Part 2</h3>
+                        <iframe width="520" height="330" src="https://www.youtube.com/embed/YqOb3PrDAsE?" title="Bloopers 2"
+                            allowfullscreen></iframe>
                     </div>
-                    <div class="social">
-                        <img class="socialIcon" src="https://cdn-icons-png.flaticon.com/512/49/49354.png" alt="logoFacebook">
-                        <a class="socialText" href="https://www.facebook.com" target="_blank">Facebook</a>
+                    <!-- Part 3 -->
+                    <div>
+                        <h3>Part 3</h3>
+                        <iframe width="520" height="330" src="https://www.youtube.com/embed/nueLNG9QZ_g?" title="Bloopers 3"
+                            allowfullscreen></iframe>
                     </div>
                 </div>
-            </footer>
-        </div>
+            </div>
+        </main>
+        <!--COPYRIGHT + XARXES SOCIALS-->
+        <footer>
+            <p class="textFooter">© Drets reservats, 2022</p>
+            <p class="textFooter">Segueix la sèrie a les xarxes socials!</p>
+
+            <div class="socialMedia">
+                <div class="social">
+                    <img class="socialIcon" src="https://nicoguerin.github.io/m4uf1pac1/img/logoinstagram.png"
+                        alt="logoInstagram">
+                    <a class="socialText" href="https://www.instagram.com" target="_blank">Instagram</a>
+                </div>
+                <div class="social">
+                    <img class="socialIcon" src="https://nicoguerin.github.io/m4uf1pac1/img/logotwitter.png"
+                        alt="logoTwitter">
+                    <a class="socialText" href="https://www.twitter.com" target="_blank">Twitter</a>
+                </div>
+                <div class="social">
+                    <img class="socialIcon" src="https://cdn-icons-png.flaticon.com/512/49/49354.png" alt="logoFacebook">
+                    <a class="socialText" href="https://www.facebook.com" target="_blank">Facebook</a>
+                </div>
+            </div>
+        </footer>
     </body>
 </html>
