canvis a general i videos

--- a/web/general.html
+++ b/web/general.html
@@ -38,9 +38,11 @@
             </nav>
         </header>
         <main>
+            <h2>Secció d'informació de la sèrie</h2>
             <!-- INFORMACIÓ GENERAL -->
             <section id="section1">
-                <h2>Informació general</h2>
+
+                <h2>Informació principal</h2>
                 <ul>
                     <li><strong>País d'origen:</strong> Espanya</li>
                     <li><strong>Idioma:</strong> Castellà</li>
