--- a/web/videos.html
+++ b/web/videos.html
@@ -46,21 +46,21 @@
                 <h2><u>Moments destacats</u></h2>
                 <div>
                     <!-- Intro -->
-                    <div>
+                    <div class="videoFrame">
                         <h3>Intro de la sèrie</h3>
-                        <iframe width="520" height="330" src="https://www.youtube.com/embed/qJGJEA2OJLU"
+                        <iframe src="https://www.youtube.com/embed/qJGJEA2OJLU"
                             title="Intro La Casa de Papel" allowfullscreen></iframe>
                     </div>
                     <!-- Bella Ciao -->
-                    <div>
+                    <div class="videoFrame">
                         <h3>El Profesor i Berlín cantant el Bella Ciao</h3>
-                        <iframe width="520" height="330" src="https://www.youtube.com/embed/9ao4FEaDGhQ" title="Bella Ciao"
+                        <iframe src="https://www.youtube.com/embed/9ao4FEaDGhQ" title="Bella Ciao"
                             allowfullscreen></iframe>
                     </div>
                     <!-- Ti Amo -->
-                    <div>
+                    <div class="videoFrame">
                         <h3>Casament entre Berlín i Tatiana</h3>
-                        <iframe width="520" height="330" src="https://www.youtube.com/embed/K3xtWk9VJ5s?start=8"
+                        <iframe src="https://www.youtube.com/embed/K3xtWk9VJ5s?start=8"
                             title="Ti Amo" allowfullscreen></iframe>
                     </div>
                 </div>
@@ -72,33 +72,33 @@
 
                 <div>
                     <!-- Temporada 1 -->
-                    <div>
+                    <div class="videoFrame">
                         <h3>Temporada 1</h3>
-                        <iframe width="520" height="330" src="https://www.youtube.com/embed/To_kVMMu-Ls?"
+                        <iframe src="https://www.youtube.com/embed/To_kVMMu-Ls?"
                             title="Trailer temporada 1" allowfullscreen></iframe>
                     </div>
                     <!-- Temporada 2 -->
-                    <div>
+                    <div class="videoFrame">
                         <h3>Temporada 2</h3>
-                        <iframe width="520" height="330" src="https://www.youtube.com/embed/KF93D4t_jDs?"
+                        <iframe src="https://www.youtube.com/embed/KF93D4t_jDs?"
                             title="Trailer temporada 2" allowfullscreen></iframe>
                     </div>
                     <!-- Temporada 3 -->
-                    <div>
+                    <div class="videoFrame">
                         <h3>Temporada 3</h3>
-                        <iframe width="520" height="330" src="https://www.youtube.com/embed/82pIoHo6Te4?"
+                        <iframe src="https://www.youtube.com/embed/82pIoHo6Te4?"
                             title="Trailer temporada 3" allowfullscreen></iframe>
                     </div>
                     <!-- Temporada 4 -->
-                    <div>
+                    <div class="videoFrame">
                         <h3>Temporada 4</h3>
-                        <iframe width="520" height="330" src="https://www.youtube.com/embed/YlnmVLoIsRk?"
+                        <iframe src="https://www.youtube.com/embed/YlnmVLoIsRk?"
                             title="Trailer temporada 4" allowfullscreen></iframe>
                     </div>
                     <!-- Temporada 5 -->
-                    <div>
+                    <div class="videoFrame">
                         <h3>Temporada 5</h3>
-                        <iframe width="520" height="330" src="https://www.youtube.com/embed/9EThJa4-1t4?"
+                        <iframe src="https://www.youtube.com/embed/9EThJa4-1t4?"
                             title="Trailer temporada 5" allowfullscreen></iframe>
                     </div>
                 </div>
@@ -109,21 +109,21 @@
                 <h2><u>Preses falses</u></h2>
                 <div>
                     <!-- Part 1 -->
-                    <div>
+                    <div class="videoFrame">
                         <h3>Part 1</h3>
-                        <iframe width="520" height="330" src="https://www.youtube.com/embed/UnrQ4XM4TFU?" title="Bloopers 1"
+                        <iframe src="https://www.youtube.com/embed/UnrQ4XM4TFU?" title="Bloopers 1"
                             allowfullscreen></iframe>
                     </div>
                     <!-- Part 2 -->
-                    <div>
+                    <div class="videoFrame">
                         <h3>Part 2</h3>
-                        <iframe width="520" height="330" src="https://www.youtube.com/embed/YqOb3PrDAsE?" title="Bloopers 2"
+                        <iframe src="https://www.youtube.com/embed/YqOb3PrDAsE?" title="Bloopers 2"
                             allowfullscreen></iframe>
                     </div>
                     <!-- Part 3 -->
-                    <div>
+                    <div class="videoFrame">
                         <h3>Part 3</h3>
-                        <iframe width="520" height="330" src="https://www.youtube.com/embed/nueLNG9QZ_g?" title="Bloopers 3"
+                        <iframe src="https://www.youtube.com/embed/nueLNG9QZ_g?" title="Bloopers 3"
                             allowfullscreen></iframe>
                     </div>
                 </div>
