canvis en el format dels titols de les pàgines

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         </header>
         <!--IMATGE SÈRIE + ÚLTIMES NOTÍCIES-->
         <main>
-            <h2>La Casa de Papel Club de Fans</h2>
+            <h2 class="titolPagina">La Casa de Papel Club de Fans</h2>
             <h4>Consulta tota la informació de la sèrie en aquesta web!</h4>
             <div class="contPrincipal">
                 <img id="imatgePortada" src="./img/imatgelcdp.webp" height="410" width="620"
