--- a/web/agenda.html
+++ b/web/agenda.html
@@ -38,7 +38,7 @@
             </nav>
         </header>
         <main>
-            <h2>Consulta tots els capítols de cada temporada de la sèrie</h2>
+            <h2 class="titolPagina">Consulta tots els capítols de cada temporada de la sèrie</h2>
             <table>
                 <thead>
                     <tr>
