--- a/web/contacte.html
+++ b/web/contacte.html
@@ -38,7 +38,7 @@
             </nav>
         </header>
         <main>
-            <h2 class="titolPag">Pàgina de contacte</h2>
+            <h2 class="titolPagina">Pàgina de contacte</h2>
             <div>
                 <!-- CONTACTE AMB VANCOUVER MEDIA -->
                 <div class="contacte">
