--- a/web/fotos.html
+++ b/web/fotos.html
@@ -38,7 +38,7 @@
             </nav>
         </header>
         <main>
-            <h2>Secció de fotos sobre la sèrie</h2>
+            <h2 class="titolPagina">Secció de fotos sobre la sèrie</h2>
             <div>
                 <img src="../img/im1.jpg" height="350" alt="Atracadors deixant les armes al terra">
                 <img src="../img/im2.jpg" height="350" alt="Ostatge és disparat per error per la policia">
