--- a/web/videos.html
+++ b/web/videos.html
@@ -39,7 +39,7 @@
         </header>
         <!--VÍDEOS-->
         <main>
-            <h2>Secció de vídeos sobre la sèrie</h2>
+            <h2 class="titolPagina">Secció de vídeos sobre la sèrie</h2>
 
             <!-- Moments destacats de la sèrie -->
             <div>
