millora presentació dels actors i actrius de la sèrie

--- a/web/general.html
+++ b/web/general.html
@@ -85,25 +85,76 @@
             <!-- ACTORS / ACTRIUS -->
             <section id="section5">
                 <h2>Actors i actrius</h2>
-                <ul>
-                    <li><strong>Úrsula Corberó</strong>, interpretant Tokio</li>
-                    <li><strong>Itziar Ituño</strong>, interpretant la Inspectora Raquel Murillo</li>
-                    <li><strong>Álvaro Morte</strong>, interpretant El Profesor</li>
-                    <li><strong>Paco Tous</strong>, interpretant Moscú</li>
-                    <li><strong>Pedro Alonso</strong>, interpretant Berlín</li>
-                    <li><strong>Alba Flores</strong>, interpretant Nairobi</li>
-                    <li><strong>Miguel Herrán</strong>, interpretant Río</li>
-                    <li><strong>Jaime Lorente</strong>, interpretant Denver</li>
-                    <li><strong>Esther Acebo</strong>, interpretant Mónica Gaztanbide</li>
-                    <li><strong>Enrique Arce</strong>, interpretant Arturo</li>
-                    <li><strong>María Pedraza</strong>, interpretant Alison Parker</li>
-                    <li><strong>Darko Perić</strong>, interpretant Helsinki</li>
-                    <li><strong>Rodrigo de la Serna</strong>, interpretant Palermo</li>
-                    <li><strong>Najwa Nimri</strong>, interpretant la inspectora Alicia Sierra</li>
-                    <li><strong>Luka Peroš</strong>, interpretant Marsella</li>
-                    <li><strong>Belén Cuesta</strong>, interpretant Manila</li>
-                    <li><strong>Fernando Cayo</strong>, interpretant el Coronel Tamayo</li>
-                </ul>
+                <div>
+                    <div class="actors">
+                        <img class="imatgeActor" src="../img/actors/tokio.jpeg">
+                        <p class="textActor">Úrsula Corberó - Tokio</p>
+                    </div>
+                    <div class="actors">
+                        <img class="imatgeActor" src="../img/actors/raquelmurillo.jpg">
+                        <p class="textActor">Itziar Atuño - Raquel Murillo</p>
+                    </div>
+                    <div class="actors">
+                        <img class="imatgeActor" src="../img/actors/profesor.jpg">
+                        <p class="textActor">Álvaro Morte - El Profesor</p>
+                    </div>
+                    <div class="actors">
+                        <img class="imatgeActor" src="../img/actors/moscu.jpg">
+                        <p class="textActor">Paco Tous - Moscú</p>
+                    </div>
+                    <div class="actors">
+                        <img class="imatgeActor" src="../img/actors/berlin.jpg">
+                        <p class="textActor">Pedro Alonso - Berlín</p>
+                    </div>
+                    <div class="actors">
+                        <img class="imatgeActor" src="../img/actors/nairobi.jpg">
+                        <p class="textActor">Alba Flores - Nairobi</p>
+                    </div>
+                    <div class="actors">
+                        <img class="imatgeActor" src="../img/actors/rio.jpg">
+                        <p class="textActor">Miguel Herrán - Río</p>
+                    </div>
+                    <div class="actors">
+                        <img class="imatgeActor" src="../img/actors/denver.jpg">
+                        <p class="textActor">Jaime Lorente - Denver</p>
+                    </div>
+                    <div class="actors">
+                        <img class="imatgeActor" src="../img/actors/monica.jpg">
+                        <p class="textActor">Esther Acebo - Mónica Gaztanbide</p>
+                    </div>
+                    <div class="actors">
+                        <img class="imatgeActor" src="../img/actors/arturo.webp">
+                        <p class="textActor">Enrique Arce - Arturo</p>
+                    </div>
+                    <div class="actors">
+                        <img class="imatgeActor" src="../img/actors/alison.webp">
+                        <p class="textActor">María Pedraza - Alison Parker</p>
+                    </div>
+                    <div class="actors">
+                        <img class="imatgeActor" src="../img/actors/helsinki.webp">
+                        <p class="textActor">Darko Perić - Helsinki</p>
+                    </div>
+                    <div class="actors">
+                        <img class="imatgeActor" src="../img/actors/palermo.jpg">
+                        <p class="textActor">Rodrigo de la Serna - Palermo</p>
+                    </div>
+                    <div class="actors">
+                        <img class="imatgeActor" src="../img/actors/alicia.jpg">
+                        <p class="textActor">Najwa Nimri - Alicia Sierra</p>
+                    </div>
+                    <div class="actors">
+                        <img class="imatgeActor" src="../img/actors/marsella.webp">
+                        <p class="textActor">Luka Peroš - Marsella</p>
+                    </div>
+                    <div class="actors">
+                        <img class="imatgeActor" src="../img/actors/manila.jpg">
+                        <p class="textActor">Belén Cuesta - Manila</p>
+                    </div>
+                    <div class="actors">
+                        <img class="imatgeActor" src="../img/actors/tamayo.webp">
+                        <p class="textActor">Fernando Cayo - Coronel Tamayo</p>
+                    </div>
+                </div>
             </section>
 
             <!-- TRAMES DE LES TEMPORADES -->
